generate revenue real and fake
